fixed excess mobile spacing

--- a/wdd130/toddshobbyhideout/styles/styles.css
+++ b/wdd130/toddshobbyhideout/styles/styles.css
@@ -368,6 +368,7 @@ footer a:hover {
 
    #welcome-text-box {
         margin-bottom: 25px;
+        margin-top: -200px;
    }
     #hero-section {
         margin-top: 0;
